small bug fixes
user-popouts/better-connections: fixed a bug with the activity icons on the UserDetails(BD) plugin,
fixed a bug where connected account images were wrong

user-popouts/main: fixed a bug where if activity text was to big, it overflowed

--- a/user-popouts/main.scss
+++ b/user-popouts/main.scss
@@ -69,10 +69,14 @@
   .activity-2INFPu {
     margin: 0 0 12px;
     padding: 8px;
-    width: auto;
     border-radius: 4px;
     box-shadow: var(--elevation-high);
     background-color: var(--background-primary);
+    .content-3JfFJh {
+      div, h3, span {
+        white-space: pre-wrap;
+      }
+    }
     .assetsLargeImage-eYwpTX {
       border-radius: 4px;
     }
